--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,7 +10,7 @@ body {
 
 .navbar {
     padding: 0.5rem;
-    background-color: #f5f6f7;
+    background-color: var(bs-blue);
 }
 
 .navbar-collapse {
