--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -74,7 +74,13 @@ h1{
     color: white;
 }
 
-.articulos .card {
+/*.articulos .card {
+    width: 60%;
+    max-width: 400px;
+    margin: 20px;
+}*/
+
+.card {
     width: 60%;
     max-width: 400px;
     margin: 20px;
