--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -8,12 +8,11 @@ body {
 
 /* Barra de navegación */
 
-/* Color lightgray */
+
 
 .navbar {
-    padding: 0.1rem;
-    background-color: lightgray;
-    color: red;
+    padding: 0.01rem;
+    background-color: black;    
 }
 
 .navbar-collapse {
@@ -129,7 +128,6 @@ h1{
     width: 100%;
     display: flex;
     align-items: center;
-
 }
 
 .contacto .descripcion{
@@ -250,219 +248,4 @@ footer {
     }
 }
 
-/*
-font-family: 'Quicksand', sans-serif;
-font-family: 'Rubik Dirt', cursive;
-font-family: 'Share Tech Mono', monospace;
 
-*/
-
-/* Testimonios */
-
-/* .testimonios {
-    padding: 40px 40px 80px 40px;
-}
-
-
-.testimonios .carousel {
-    max-width: 800px;
-}
-
-.carousel-item {
-    height: 500px;
-}
-
-.carousel-item .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.testimonio-imagen{
-    width: 150px;
-    height: 150px;
-    margin: 10px 10px 20px 10px;
-}
-
-.testimonio-texto {
-    max-width: 70%;
-    font-size: 20px;
-    text-align: center;
-    font-family: 'Share Tech Mono', monospace;
-}
-
-.testimonio-info {
-    font-weight: bold;
-    text-align: center;
-}
-
-.testimonio-info p {
-    margin-bottom: 0;
-}
-
-.testimonio-info .cliente {
-    font-size: 1.2rem;
-}
-
-.testimonio-info .cargo {
-    font-size: 0.9rem;
-    color: #656560;
-} */
-
-/* .proyecto{
-    position: relative;
-}
-
-.proyecto:hover img{
-    opacity: 0.2;
-}
-
-.proyecto:hover .overlay{
-    opacity: 1;
-}
-
-.articulos{
-    min-height: 500px;
-    padding: 30px;
-} */
-
-/* Seccion Hero*/
-
-/* .hero{
-    background-color: #f5f6f7;
-    min-height: 450px;
-    text-align: center;
-}
-
-.hero-principal{
-    padding: 3rem;
-}
-
-.hero-imagen-desarrollador{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin: 20px;
-}
-
-.hero-principal h1{
-    font-size: 2.5rem;
-    font-family: 'Rubik Dirt', cursive;
-}
-
-.hero-principal h2{
-    font-size: 1.5rem;
-    color: #615151;
-}
-
-/* Sobre mí*/
-
-/* .sobre-mi{
-    height: 500px;
-    padding: 10px;
-}
-
-.sobre-mi .contenedor {
-    max-width: 600px;
-    text-align: center;
-}
-
-.experiencia{
-    padding: 40px 40px 60px 40px;
-}
-
-.experiencia .columna {
-    padding: 20px;
-    border: 2px solid #80804d;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    transition: all 0.2s ease-in;
-}
-
-.experiencia .columna:hover{
-    color: white;
-    background-color: #1b1b32;
-} */
-
-/*.experiencia .row div{
-    height: 250px;
-    background-color: purple;
-    border: 3px solid orange;
-}
-*/
-
-/* .experiencia-titulo{
-    font-size: 25px;
-    font-weight: bold;
-    margin: 10x 0;
-}
-
-.badges-contenedor{
-    font-size: 20px;
-    font-weight: bold;
-    margin: 10px 0;
-}
-
-.badge{
-    margin: 5px;
-}
-
-.experiencia i {
-    font-size: 2.5rem;
-    color: #7ade30;
-    background-color: #0a0a23;
-    padding: 8px 19px;
-    border-radius: 50%;
-} */ 
-
-/* Proyectos */
-
-/* .proyectos-recientes{
-    padding: 40px;
-
-}
-
-.proyectos-recientes img{
-    height: 100%;
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    display: block;
-    transition: all 0.2s ease;
-}
-
-.proyectos-contenedor{
-    padding-top: 60px;
-    margin-bottom: 40px;
-}
-
-.overlay{
-    transition: all 0.2s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-
-.overlay p{
-    font-size: 25px;
-    font-weight: bold;
-    margin-bottom: 0;
-}
-
-.overlay .iconos-contenedor{
-    display: flex;
-}
-
-.overlay i{
-    color: black;
-    font-size: 60px;
-    margin: 10px;
-} */
