Set colors for body

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,14 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap');
 
 /* Body */
+body { line-height: 1; color: black; background: white; }
 
 body {
     height:2000px;
 }
 
 /* Barra de navegación */
-
-
 
 .navbar {
     padding: 0.01rem;
