--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -8,8 +8,8 @@ body {
 }
 
 nav{
-    background-color:black;
-    color: whitesmoke;
+    /*background-color:black;
+    color: whitesmoke;*/
     font-size: 1.8rem;
 }
 
