--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -111,10 +111,19 @@ h1{
     width: 200px;
 }    
 .card-img-top {
-    border: solid 4px rgb(7, 42, 238);
+    border: solid 4px rgb(219, 7, 238);
     border-radius: 20px;
-    width: 200px;
+    width: 100%;
+    object-fit: cover;
+    height: 40vh;
 }
+
+/*.card-img-top {
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+    }
+*/
 .no-wrap{
     white-space: nowrap;
 }
