--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -111,7 +111,7 @@ h1{
     width: 200px;
 }    
 .card-img-top {
-    border: solid 4px rgb(238, 88, 7);
+    border: solid 4px #07ee31;
     border-radius: 20px;
     width: 80%;
     object-fit: cover;
