--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -114,10 +114,9 @@ h1{
     border: solid 4px #07ee31;
     border-radius: 20px;
     width: 80%;
-    object-fit: cover;
-    
+    object-fit: contain;    
 }
-
+/* Border contain */
 /*.card-img-top {
     width: 100%;
     height: 40vh;
