--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -114,7 +114,8 @@ h1{
     border: solid 3px #2b16eb;
     border-radius: 10px;
     width: 100%;
-    object-fit: contain;    
+    object-fit: contain; 
+    margin: 0 auto auto auto;   
 }
 /* Border contain */
 /*.card-img-top {
